--- a/requirements.txt
+++ b/requirements.txt
@@ -20,39 +20,4 @@ numpy==1.24.3
 matplotlib==3.7.2
 seaborn==0.12.2
 pandas==2.0.3
-sqlite3
-json
-datetime
-threading
-logging
-os
-sys
-pathlib
-shutil
-zipfile
-hashlib
-base64
-uuid
-random
-string
-re
-collections
-itertools
-functools
-operator
-statistics
-math
-time
-calendar
-email
-smtplib
-socket
-urllib.parse
-urllib.request
-ssl
-hashlib
-hmac
-tempfile
-subprocess
-platform
-psutil 
+psutil==5.9.5 
