--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,6 @@ numpy==1.24.3
 matplotlib==3.7.2
 seaborn==0.12.2
 pandas==2.0.3
-psutil==5.9.5 
+psutil==5.9.5
+pytest==7.4.0
+pytest-flask==1.2.0 
